# deepclaws

./: .env.example  .gitignore  README.md  pyproject.toml
.overclaw/: agents.toml
.overclaw/agents/kimi-go-brr/experiments/: agent_working.py  results.tsv
.overclaw/agents/kimi-go-brr/experiments/agent_working/agent/: agent.py  kimi_compat.py  prompts.py  tools.py
.overclaw/agents/kimi-go-brr/setup_spec/: dataset.5.json  dataset.json  eval_spec.json  policies.md
agent/: agent.py  prompts.py  tools.py
data/livesqlbench/: alien.sqlite  alien_full.sql  alien_smoke.sql  livesqlbench_gt_kg_testcases_0528.jsonl
demo/: __init__.py  server.py
docs/: AGENT_VERSIONING.md  Autho0.md  BASELINE_SCOREBOARD.md  IMPLEMENTATION_PLAN.md  PLAN.md  REVIEW.md  SETUP.md  SPONSORS.md  airbyte.md  ghost.md  kimiGoBrr.code-workspace  macroscrope.md  overmind.md
docs/phases/: PHASE_01_FOUNDATION.md  PHASE_02_BENCHMARK_DATA.md  PHASE_03_RUNNABLE_AGENT.md  PHASE_04_BASELINE_EVAL.md  PHASE_05_OPERATOR_CLI.md  PHASE_05_TRACING.md  PHASE_06_TRACING.md  PHASE_06_VERSIONING.md  PHASE_07_IMPROVEMENT_LOOP.md  PHASE_07_VERSIONING.md  PHASE_08_DEMO_SURFACE.md  PHASE_08_IMPROVEMENT_LOOP.md  PHASE_09_DEMO_SURFACE.md
eval/: dataset.gt.json  dataset.json  score.py
pipeline/: run_baseline.py
scripts/: build_overclaw_dataset.py  download_benchmark.py  integrate_livesqlbench_gt.py  load_benchmark.py  run_demo_ui.py  run_eval.py  run_question.py  sqlite_to_postgres_sql.py  test_agent_stack.py  test_kimi_bind_tools.py  test_kimi_litellm_bind_tools.py
web/: index.html
(+15 files in other folders)
