[project]
name = "kimi-go-brr"
version = "0.1.0"
description = "Self-improving SQL analytics agent hackathon project"
requires-python = ">=3.11"
dependencies = [
  "datasets>=4.1.1",
  "deepagents",
  "openai>=2.0.0",
  "psycopg2-binary>=2.9.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
